deploy/web.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: numbergossip-web
spec:
  selector:
    matchLabels:
      app: numbergossip
  template:
    metadata:
      labels:
        app: numbergossip
    spec:
      containers:
        - image: gcr.io/pelagic-force-260622/numbergossip:7137590 
          name: numbergossip
          imagePullPolicy: Always
          ports:
          - containerPort: 80
