deploy/web-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: web-svc
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: LoadBalancer
  loadBalancerIP: 35.196.200.253
  selector:
    app: numbergossip
